--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ automod = "1.0.13"
 clap = { version = "4.4.10", features = ["derive"] }
 curl = "0.4.46"
 inventory = "0.3.13"
+itertools = "0.13.0"
 rayon = "1.8.0"
 regex = "1.10.2"
