--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ curl = "0.4.46"
 inventory = "0.3.13"
 rayon = "1.8.0"
 regex = "1.10.2"
+openssl = "^0.10"
+
+[features]
+vendored-openssl = ["openssl/vendored"]
